# repo-to-kgraph

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  FINAL_RECOMMENDATIONS_SUMMARY.md  INTEGRATION_RECOMMENDATIONS.md  README.md  TEST_RESULTS.md  USAGE_GUIDE.md  comprehensive_test_suite.py  debug_repo.py  debug_repo_detailed.py  fix_nested_calls.py  interactive_shell  kgraph  pyproject.toml  requirements-dev.txt  requirements.txt  run_mega_verification_test.py  run_verification_test.py
scripts/: run-tests.sh  setup-dev.sh  start-dev-server.sh
src/repo_kgraph/: __init__.py  __main__.py
src/repo_kgraph/api/: __init__.py  app.py  main.py
src/repo_kgraph/api/models/: __init__.py  parse_repo.py
src/repo_kgraph/cli/: __init__.py  __main__.py  base.py  interactive.py  main.py
src/repo_kgraph/core/: __init__.py
src/repo_kgraph/lib/: __init__.py  config.py  database.py  source_filter.py
src/repo_kgraph/models/: __init__.py  code_entity.py  context_result.py  index.py  knowledge_graph.py  query.py  relationship.py  repository.py
src/repo_kgraph/services/: __init__.py  call_graph_analyzer.py  contextual_chunker.py  embedding.py  flow_analyzer.py  graph_builder.py  multi_hop_retriever.py  parser.py  query_processor.py  repository_manager.py  retriever.py  task_context_adapter.py
test-app/: .gitignore  README.md  __init__.py  app.py  requirements.txt
test-app/models/: __init__.py  url.py  user.py
test-app/services/: __init__.py  analytics_service.py  url_service.py  user_service.py
test-app/utils/: __init__.py  config.py  database.py  security.py
test-mega-verification/: MEGA_EXPECTED_RESULTS.md
test-mega-verification/javascript/: client.js
test-mega-verification/python/: models.py  services.py
test-mega-verification/typescript/: types.ts
test-simple/: hello.py  url_service.py
test-ultimate-verification/cpp/: database.cpp
test-ultimate-verification/java/: UserService.java
test-verification/: EXPECTED_RESULTS.md  database.py  user.py
tests/: conftest.py  test_mega_verification.py  test_parser_verification.py
tests/contract/: test_entity_graph_api.py  test_health_api.py  test_parse_repo_api.py  test_parse_repo_cli.py  test_query_api.py  test_query_task_cli.py  test_repositories_api.py  test_repository_status_api.py  test_serve_cli.py  test_status_cli.py  test_update_cli.py
tests/integration/: test_context_retrieval.py  test_incremental_updates.py  test_multilanguage_parsing.py  test_repository_parsing.py
